--- a/Exercice7/style.css
+++ b/Exercice7/style.css
@@ -51,3 +51,28 @@ section {
     margin-bottom: 20px;
 }
 
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 20px;
+    }
+    ul {
+        list-style-position: inside;
+        padding-left: 0;
+    }
+    nav ul {
+        display: flex;
+        flex-direction: column;
+    }
+
+    nav li {
+        margin: 0;
+    }
+
+    main {
+        text-align: center;
+    }
+
+    footer {
+        text-align: center;
+    }
+}
