--- a/Exercice6/assets/style.css
+++ b/Exercice6/assets/style.css
@@ -1,5 +1,5 @@
-ul li {
-  color: rgb(0, 0, 255);
+li {
+  color: #007bff;
   padding-left: 10px;
   margin-bottom: 15px;
 }/*# sourceMappingURL=style.css.map */
