--- a/Exercice6/style.scss
+++ b/Exercice6/style.scss
@@ -1,7 +1,7 @@
-$blue :rgb(0, 0, 255);
+$blue :#007bff;
 
-ul li {
-    color : $blue;
-    padding-left: 10px;
+li {
+    color: $blue;          
+    padding-left: 10px;  
     margin-bottom: 15px;
 }
